<!--<resources>-->
<!--    <string name="app_name">SmartHomeApplication</string>-->
<!--</resources>-->
<resources>
    <string name="app_name">SmartHomeApplication</string>
    <string name="bathroom">Bathroom</string>
    <string name="light">Light</string>
    <string name="devices">Devices</string>
    <string name="heating">Heating</string>
    <string name="windows_and_doors">Windows and Doors</string>
    <string name="shades">shades</string>
    <string name="livingroom">Living Room</string>
    <string name="bedroom">Bedroom</string>
    <string name="kitchen">Kitchen</string>
    <string name="TV">TV</string>
    <string name="Lamp">Lamp</string>
    <string name="vacuum">Vacuum</string>
    <string name="BedsideTableLamp">Bedside Table Lamp</string>
    <string name="airPurifier">Air Purifier</string>
    <string name="microwave">Microwave</string>
    <string name="coffeeMaker">Coffee Maker</string>
    <string name="dishwasher">Dishwasher</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="dryer">Dryer</string>
    <string name="washer">Washer</string>
    <string name="AromatherapyDiffuser">Aromatherapy Diffuser</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="defaultTemperature">0 C</string>
    <string name="adjust_temperature">Adjust Temperature</string>
    <string name="ac">AC</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="heater">Heater</string>
    <string name="window">Window</string>
    <string name="door">Door</string>
    <string name="adjust_shades_level">Adjust Shades Level</string>
</resources>